// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`omdb should return a movie for given imdbId 1`] = `
Object {
  "movie": Object {
    "actors": Array [
      "Leonardo DiCaprio",
      "Joseph Gordon-Levitt",
      "Ellen Page",
      "Tom Hardy",
    ],
    "awards": "Won 4 Oscars. Another 152 wins & 204 nominations.",
    "boxOffice": "$292,568,851",
    "country": Array [
      "USA",
      "UK",
    ],
    "director": "Christopher Nolan",
    "genre": Array [
      "Action",
      "Adventure",
      "Sci-Fi",
      "Thriller",
    ],
    "imdb": Object {
      "id": "tt1375666",
      "rating": "8.8",
      "votes": "1,755,015",
    },
    "language": Array [
      "English",
      "Japanese",
      "French",
    ],
    "metacritic": Object {
      "rating": "74/100",
    },
    "plot": "A thief who steals corporate secrets through the use of dream-sharing technology is given the inverse task of planting an idea into the mind of a CEO.",
    "poster": "https://m.media-amazon.com/images/M/MV5BMjAxMzY3NjcxNF5BMl5BanBnXkFtZTcwNTI5OTM0Mw@@._V1_SX300.jpg",
    "production": "Warner Bros. Pictures",
    "rated": "PG-13",
    "released": "16 Jul 2010",
    "rottenTomatoes": Object {
      "rating": "86%",
    },
    "runtime": "148 min",
    "title": "Inception",
    "website": "http://inceptionmovie.warnerbros.com/",
    "writer": "Christopher Nolan",
    "year": "2010",
  },
}
`;

exports[`omdb should return movies with title 1`] = `
Object {
  "movies": Array [
    Object {
      "actors": Array [
        "Leonardo DiCaprio",
        "Joseph Gordon-Levitt",
        "Ellen Page",
        "Tom Hardy",
      ],
      "awards": "Won 4 Oscars. Another 152 wins & 204 nominations.",
      "boxOffice": "$292,568,851",
      "country": Array [
        "USA",
        "UK",
      ],
      "director": "Christopher Nolan",
      "genre": Array [
        "Action",
        "Adventure",
        "Sci-Fi",
        "Thriller",
      ],
      "imdb": Object {
        "id": "tt1375666",
        "rating": "8.8",
        "votes": "1,755,015",
      },
      "language": Array [
        "English",
        "Japanese",
        "French",
      ],
      "metacritic": Object {
        "rating": "74/100",
      },
      "plot": "A thief who steals corporate secrets through the use of dream-sharing technology is given the inverse task of planting an idea into the mind of a CEO.",
      "poster": "https://m.media-amazon.com/images/M/MV5BMjAxMzY3NjcxNF5BMl5BanBnXkFtZTcwNTI5OTM0Mw@@._V1_SX300.jpg",
      "production": "Warner Bros. Pictures",
      "rated": "PG-13",
      "released": "16 Jul 2010",
      "rottenTomatoes": Object {
        "rating": "86%",
      },
      "runtime": "148 min",
      "title": "Inception",
      "website": "http://inceptionmovie.warnerbros.com/",
      "writer": "Christopher Nolan",
      "year": "2010",
    },
    Object {
      "actors": Array [
        "Leonardo DiCaprio",
        "Joseph Gordon-Levitt",
        "Lukas Haas",
      ],
      "awards": "N/A",
      "boxOffice": "N/A",
      "country": Array [
        "USA",
      ],
      "director": "Ian Kirby",
      "genre": Array [
        "Animation",
        "Short",
        "Sci-Fi",
      ],
      "imdb": Object {
        "id": "tt5295894",
        "rating": "7.8",
        "votes": "1,138",
      },
      "language": Array [
        "English",
      ],
      "metacritic": null,
      "plot": "This Inception prequel unfolds courtesy of a beautiful Motion Comic, and explains how Cobb, Arthur and Nash were enlisted by Cobol Engineering. Diehard fans of the film will be especially interested in this one.",
      "poster": "https://m.media-amazon.com/images/M/MV5BMjE0NGIwM2EtZjQxZi00ZTE5LWExN2MtNDBlMjY1ZmZkYjU3XkEyXkFqcGdeQXVyNjMwNzk3Mjk@._V1_SX300.jpg",
      "production": "N/A",
      "rated": "N/A",
      "released": "07 Dec 2010",
      "rottenTomatoes": null,
      "runtime": "15 min",
      "title": "Inception: The Cobol Job",
      "website": "N/A",
      "writer": "Christopher Nolan (based on characters by)",
      "year": "2010",
    },
  ],
}
`;
